# AI_Playground

./: CMakeLists.txt  README.md
AI_Playground/: CMakeLists.txt  cuda_context.cpp  cuda_context.h  dx12_context.cpp  dx12_context.h  ioperator.h  main.cpp  quantized_gemm.cpp  quantized_gemm.h
AI_Playground/kernels/: vec_add.cu  vec_add.ptx
